[releng] build extension sdk
Change-Id: Icf46a350224b918d340d69ae4cfad9a4a3b57477
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>