@@ -85,9 +85,6 @@ This file was generated by Eclipse EGF
     <condition property="studio_version" value="${env.studio_version}">
         <isset property="env.studio_version" />
     </condition>
-    <condition property="main_version" value="${env.main_version}">
-        <isset property="env.main_version" />
-    </condition>
 
     <property file="build.properties" />
 
@@ -149,7 +146,6 @@ This file was generated by Eclipse EGF
 	                <jvmarg value="-Dcapella.egf.repo.url=${capella.egf.repo.url}"/>
 	                <jvmarg value="-Declipse_version=${eclipse_version}"/>
 	                <jvmarg value="-Dstudio_version=${studio_version}"/>
-	                <jvmarg value="-Dmain_version=${main_version}"/>
                     <arg value="-data" />
                     <arg value="@{workspace}" />
                 <args />
@@ -339,7 +335,6 @@ This file was generated by Eclipse EGF
 		<echo message="Provided $${capella.egf.repo.url} : ${capella.egf.repo.url}" />
 		<echo message="Provided $${eclipse_version} : ${eclipse_version}" />
 		<echo message="Provided $${studio_version} : ${studio_version}" />
-		<echo message="Provided $${main_version} : ${main_version}" />
 	</target>
 
     <target name="init.build.properties">
@@ -362,7 +357,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,PublishStep_5,all_studio_features,TP_win32-win32-x86,AntStep_8" />
+	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,PublishStep_5,releng_feature,extension_sdk,PublishStep_8,extension_sdk_feature,all_studio_features,TP_win32-win32-x86,AntStep_12" />
 	<target name="TP_juno" depends="TP_juno_build_studio_platform" />
 	<target name="TP_juno_build_studio_platform" depends="TP_juno_build_studio_platform_setup_platform,TP_juno_build_studio_platform_install_query_legacy_features,TP_juno_build_studio_platform_install_kitalpha_features,TP_juno_build_studio_platform_install_capella_features,TP_juno_build_studio_platform_install_capella_egf_features" />
 	<target name="TP_juno_build_studio_platform_setup_platform" depends="TP_juno_build_studio_platform_setup_platform_TP_juno,TP_juno_build_studio_platform_setup_platform_install_cots_features,TP_juno_build_studio_platform_setup_platform_install_diffmerge,TP_juno_build_studio_platform_setup_platform_install_ecoretools2" />
@@ -410,6 +405,43 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
+    <target name="extension_sdk" depends="init,install.buckminster">
+        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
+
+		<echo message="install JRE ${env.JAVA_HOME}" />
+    	<buckminster command="installJRE">
+            <cmdargs>
+                <arg value="--location" />
+                <arg value="${env.JAVA_HOME}" />
+            </cmdargs>
+        </buckminster>
+
+
+		<echo message="import target platform" />
+        <buckminster command="importtargetdefinition">
+            <cmdargs>
+                <arg value="--active" />
+                <arg value="${relengDir}/buckminster_extension_sdk/build.target" />
+            </cmdargs>
+        </buckminster>
+		<echo message="provision : import projects in workspace" />
+        <buckminster command="import">
+            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
+            <cmdargs>
+                <arg value="${relengDir}/buckminster_extension_sdk/build.mspec" />
+            </cmdargs>
+        </buckminster>
+
+
+        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
+        <buckminster command="build" >
+            <cmdargs>
+                <arg value="--clean" />
+                <arg value="--thorough" />
+            </cmdargs>
+		</buckminster>
+    </target>
+
 	<target name="PublishStep_5" depends="init,install.buckminster" >
 
 		
@@ -439,13 +471,42 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
+	<target name="PublishStep_8" depends="init,install.buckminster" >
 
-	<target name="AntStep_8">
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.capella.extension.sdk.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.capella.extension.sdk.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.capella.extension.sdk.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.capella.extension.sdk.feature*/site.p2/*"/>
+				<include name="org.polarsys.capella.extension.sdk.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+
+	<target name="AntStep_12">
 		<antcall target="cleanUp"/>
 	</target>
 
 <target name="cleanUp">
-    <delete dir="${publish}/org.polarsys.capella*"/>
+    <delete dir="${publish}/org.polarsys.capella*/**"/>
 </target>
 
 
@@ -463,6 +524,7 @@ This file was generated by Eclipse EGF
 			<repository location="file:/${publish}/studio/site.p2" name="Capella_Studio/studio" />
 			<source>
 				<repository location="file:/${publish}/org.polarsys.capella.studio.releng.feature/site.p2" />
+				<repository location="file:/${publish}/org.polarsys.capella.extension.sdk.feature/site.p2" />
 			</source>
 		</p2.mirror>
 	</target>
@@ -1020,6 +1082,66 @@ This file was generated by Eclipse EGF
             </args>
         </eclipse.launch>
 	</target>	
+	<target name="releng_feature" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.capella.studio.releng.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.studio.releng.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="extension_sdk_feature" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.capella.extension.sdk.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.extension.sdk.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
 	<target name="TP_win32-win32-x86_build_studio_platform_setup_platform_TP_win32-win32-x86" depends="init,install.director" >
         <eclipse.launch app="director">
             <args>
@@ -1531,6 +1653,8 @@ This file was generated by Eclipse EGF
 
                 <arg value="-r" />
                 <arg value="file:/${publish}/org.polarsys.capella.studio.releng.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.capella.extension.sdk.feature/site.p2" />
                 
 
 
@@ -1538,6 +1662,10 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.capella.studio.releng.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.capella.studio.releng.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.extension.sdk.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.extension.sdk.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
